# opc

./: .env.example  .gitignore  LICENSE  README.md  opc-memory-daemon-missing-code.md  opc.toml  pyproject.toml
.swarm/Guidance/: ARCHITECTURE_GUIDELINES.md  TMUX_TEAM.md  WORKING_METHODS.md
.swarm/Personas/: TMUX_ARCHITECT_MANAGER.md  TMUX_DEVELOPER.md  TMUX_QA_ENGINEER.md  TMUX_SECURITY_EXPERT.md
agents/: memory-extractor.md
docker/: Dockerfile.sandbox  docker-compose.yml  init-schema.sql  migrate-add-documents.sql  migrate-add-session-uuid.sql  sandbox_runner.py
docs/: changes-from-upstream.md  commands-reference.md  database-reference.md  knowledge-graph.md  recall-api-reference.md
docs/reports/: autoresearch-recall-tuning.md
hooks/: .gitignore  CONTINUITY_CLAUDE-open-source-release.md  DISABLED-task-router-hook.json  README.md  arch-context-inject.sh  bash-read-guard.sh  braintrust_hooks.py  compiler-in-the-loop-stop.sh  compiler-in-the-loop.sh  credential-leak-dryrun.sh  credential-leak-guard.sh  file-claims.sh  handoff-index.sh  hook_launcher.py  memory-awareness.sh  package-lock.json  package.json  permission-logger.sh  permission-request-handler.sh  post-edit-notify.sh  post-tool-use-tracker.py  pre-tool-use-broadcast.sh  pre_compact_continuity.py  read-guard.sh  save-permission.sh  security-guard.sh  session-end-cleanup.sh  session-register.sh  session-start-dead-code.sh  session-start-tldr-cache.sh  session-symbol-index.sh  session_start_continuity.py  test-modern-cli.sh  tldr-context-inject.sh  tsconfig.json  vitest.config.ts
hooks/dist-only/: heartbeat.mjs
hooks/python/: auto-handoff-stop.py  braintrust_hooks.py  post-tool-use-tracker.py  post_tool_use_tracker.py  premortem-suggest.py  session-state-collector.py  session-symbol-index.py  session_start_continuity.py
hooks/src/: agent-subagent-guard.ts  arch-context-inject.ts  bash-error-pause.ts  compiler-in-the-loop-stop.ts  compiler-in-the-loop.ts  daemon-client.ts  edit-context-inject.ts  epistemic-reminder.ts  failure-detection.ts  file-claims.ts  handoff-index.ts  heartbeat.ts  impact-refactor.ts  import-error-detector.ts  import-validator.ts  memory-awareness.ts  modern-cli-enforcer.ts  path-rules.ts  peer-awareness.ts  phpunit-runner.ts  post-edit-diagnostics.ts  post-edit-notify.ts  pre-compact-continuity.ts  pre-tool-use-broadcast.ts  prompt-secret-block.ts  pytest-runner.ts  read-secret-block.ts  scrub-sweep.ts  scrub-transcript.ts  session-clean-exit.ts  session-context.ts  session-crash-recovery.ts  session-end-cleanup.ts  session-end-scrub.ts  session-id-inject.ts  session-register.ts  session-start-continuity.ts  session-start-dead-code.ts  session-start-memory-push.ts  session-start-tldr-cache.ts  (+13 more)
hooks/ts/: package.json  run-python.mjs
scripts/: README.md  SCRIPTS.md  __init__.py  agent_system_prompt.md  ast_grep_find.py  benchmark_daemon.py  benchmark_tokens.py  braintrust_analyze.py  build_hooks.sh  claude_spawn.py  claude_spawn.py.bak  deploy_hooks.sh  loogle_search.py  loogle_server.py  multi_tool_pipeline.py  observe_agents.py  qlty_check.py  ragie_query.py  ragie_status.py  ragie_upload.py  recall_temporal_facts.py  repoprompt_async.py  research_implement_pipeline.py  run_mutmut_tests.sh  spec_metadata.sh  stream_monitor.py  test_research_pipeline.py
scripts/benchmarks/: backfill_golden_hashes.py  bootstrap_golden.py  journal.py  mine_feedback_labels.py  rerank_queries.json  run_rerank_benchmark.py  tune_loop.py
scripts/cc_math/: math_base.py  math_plot.py  math_router.py  math_scratchpad.py  math_tutor.py  mpmath_compute.py  numpy_compute.py  pint_compute.py  scipy_compute.py  shapely_compute.py  sympy_baseline_validation.py  sympy_compute.py  z3_solve.py
scripts/client/: agent-animation.sh  aggregate-reasoning.sh  get-resources.sh  (+6 more)
tests/: test_archived_at_column_probe.py  test_archived_at_migration.py  test_artifact_backend_resolution.py  test_artifact_index_core.py  test_artifact_index_single.py  test_artifact_mark.py  test_artifact_query.py  test_backend_resolution.py  test_backfill_archive.py  test_backfill_kg.py  test_backfill_learnings.py  test_backfill_sessions.py  test_benchmark_metrics.py  test_build_hooks.py  test_canonical_voyage_model.py  test_cli_dispatcher.py  test_confidence_calibrator.py  test_config_core.py  test_config_handlers.py  test_config_models.py  test_deploy_hooks.py  test_documents_chunk.py  test_documents_cli.py  test_documents_db.py  test_documents_extract.py  test_documents_ingest.py  test_documents_query.py  test_documents_registry.py  test_embedding_model_column_probe.py  test_embedding_model_label.py  test_embedding_service.py  test_extract_session.py  test_extract_thinking_blocks.py  test_extract_workflow_patterns.py  test_extraction_env_allowlist.py  test_extraction_stderr_logging.py  test_generate_mini_handoff.py  test_kg_enrichment.py  test_kg_extractor.py  test_kg_extractor_redos.py  (+70 more)
(+229 files in other folders)
